--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,8 @@
     "react-hot-toast": "^2.4.1",
     "tailwindcss": "^3.3.3",
     "util": "^0.12.4",
-    "viem": "~0.3.36",
-    "wagmi": "^1.0.6"
+    "viem": "^1.12.2",
+    "wagmi": "^1.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
